upd compiler (jvm bytecode)