@@ -5,6 +5,7 @@ import com.kingmang.ixion.runtime.CollectionUtil;
 
 import java.util.Iterator;
 import java.util.List;
+import java.util.Scanner;
 import java.util.stream.IntStream;
 
 
@@ -23,28 +24,26 @@ public class Prelude {
 		System.out.print(arg.toString());
 	}
 
-    public static int parse_int(String value) {
-        return Integer.parseInt(value);
+    public static String readLine() {
+        var scanner = new Scanner(System.in);
+        if (scanner.hasNextLine()) {
+            var s = scanner.nextLine();
+            return s;
+        }
+        scanner.close();
+        return null;
     }
 
-	public static <T> void list_append(List<T> r, T a) {
-		r.add(a);
-	}
+    public static <T> void push(List<T> r, T a) {
+        r.add(a);
+    }
 
-	public static <T> T list_pop(List<T> r) {
-		return r.removeLast();
-	}
-
-	public static <T> Iterator<Integer> range(int start, int stop) {
-		return IntStream.range(start, stop).boxed().iterator();
-	}
+    public static <T> T pop(List<T> r) {
+        return r.remove(r.size() - 1);
+    }
 
 
-	public static <T> T list_get(List<T> r, int pos) {
-		return r.get(pos);
-	}
-
-	public static int len(Object r) {
+    public static int len(Object r) {
 		if(r instanceof CollectionUtil.IxListWrapper list)
             return list.list().size() + 1;
 	    else if (r instanceof String s)
